--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongoose": "^4.9.3"
+    "mongoose": "^4.9.3",
+    "ng-popover": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
