--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongoose": "^4.9.3",
-    "ng-popover": "^2.0.0"
+    "mpromise": "^0.5.5"
   },
   "devDependencies": {},
   "scripts": {
